ASC Prod BAckup/ASC Prod/force-app/main/default/objects/PaymentMethod__c/PaymentMethod__c.object-meta.xml
<CustomObject>
    <description>Provides the ability for internal user to view, create, edit and delete Payment Methods for Accounts.</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PAM-{00000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>