ASC Prod BAckup/ASC Prod/force-app/main/default/objects/PaymentMethod__c/fields/BillingFullName__c.field-meta.xml
<CustomField>
    <fullName>BillingFullName__c</fullName>
    <label>Billing Full Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>