ASC Prod BAckup/ASC Prod/force-app/main/default/objects/PaymentMethod__c/fields/Last4__c.field-meta.xml
<CustomField>
    <fullName>Last4__c</fullName>
    <label>Last 4</label>
    <length>6</length>
    <type>Text</type>
</CustomField>